Change messages and add onCancelled()

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">WearDownloader</string>
-    <string name="downloader_text">Downloader</string>
+    <string name="downloader_text">Wear Downloader</string>
 </resources>
